--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="col-12" id="prediction_suffix">
 				</div>
 			</div>
-			<canvas class="col col-lg-2" id="probability_distribution">
+			<canvas class="col col-md-6 offset-md-3" id="probability_distribution">
 			
 			</canvas>
 			<div id="form_div" class="col-md-6 offset-md-3 mt-5">Was I correct? Please help me get better by submitting the amount of dogs in the park right now.
