--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 				<div class="col-12" id="prediction_suffix">
 				</div>
 			</div>
-			<canvas class="col-md-6" id="probability_distribution">
+			<canvas class="col-md-8" id="probability_distribution">
 			
 			</canvas>
-			<div id="form_div" class="col-md-6 mt-5">Was I correct? Please help me get better by submitting the amount of dogs in the park right now.
+			<div id="form_div" class="col-md-8 offset-md-2 mt-5">Was I correct? Please help me get better by submitting the amount of dogs in the park right now.
 				<form js_action="https://script.google.com/macros/s/AKfycbyHBSts9-u_ixD-ZfidpQpABO_173B9OaklBGCT/exec" id="gform">
 					<div class="btn-group btn-group-toggle small" data-toggle="buttons">
 						<label class="btn btn-outline-primary small">
