--- a/addaplace.html
+++ b/addaplace.html
@@ -23,11 +23,26 @@
 				height: 100%;
 				z-index: 2;
 			}
+			#map-instructions{
+				z-index: 3;
+				color: #555;
+				margin:0 auto;
+				position:absolute;
+				left:50%;
+				top:50%;
+				width:246px;
+				height:28px;
+				margin-left:-123px;
+				margin-top:-14px;
+			}
 		</style>
 		
 	</head>
 	<body>
 		<div id="map"></div>
+		<div id='map-instructions' class='invisible info'>
+			<strong>Click wherever the missing park is located.</strong>
+		</div>
 		<script src="addascript.js" type="text/javascript"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
