--- a/addaplace.html
+++ b/addaplace.html
@@ -35,12 +35,20 @@
 				margin-left:-123px;
 				margin-top:-14px;
 			}
+			.info {
+				padding: 6px 8px;
+				font: 14px/16px Arial, Helvetica, sans-serif;
+				background: white;
+				background: rgba(255,255,255,0.8);
+				box-shadow: 0 0 15px rgba(0,0,0,0.2);
+				border-radius: 5px;
+			}
 		</style>
 		
 	</head>
 	<body>
 		<div id="map"></div>
-		<div id='map-instructions' class='invisible info'>
+		<div id='map-instructions' class='info'>
 			<strong>Click wherever the missing park is located.</strong>
 		</div>
 		<script src="addascript.js" type="text/javascript"></script>
