--- a/addaplace.html
+++ b/addaplace.html
@@ -29,11 +29,11 @@
 				margin:0 auto;
 				position:absolute;
 				left:50%;
-				top:50%;
-				width:246px;
+				top:10px;
+				width:320px;
 				height:28px;
-				margin-left:-123px;
-				margin-top:-14px;
+				margin-left:-160px;
+				margin-top:0px;
 			}
 			.info {
 				padding: 6px 8px;
