button at addascript

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<div class="collapse mb-5" id="collapseAbout">
 				<div class="card card-body">
 					<p>This project is a machine learning service that takes user reported data on how many dogs there are in various dog parks at different times and couples that with weather, time of the day, holidays, etc. at the time. Then, through machine learning, it uses that information to figure out which circumstances is associated with which amount of dogs present in the dog park. Using the best trained model of predicting the amount of dogs present, it reports back (above) the most likely number of dogs currently in the park, given time of the day, weather, etc. and provides a probability distribution indicating how sure it is.</p>
-					<p>If you have any questions or suggestions, please don't hesitate to <a href = "mailto: sven.henrik.karlsson@gmail.com">send me an email</a>.</p>
+					<p>If you have any questions or suggestions, please <a href = "mailto: sven.henrik.karlsson@gmail.com">send me an email</a>.</p>
 				</div>
 			</div>
 			<!--<div class="col-12" id="sankeyDiagramDiv" style="height:4500px;"></div>-->
