cleaned code and comments

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 			</div>
 			<div id="thanks_div" class="col-md-6 offset-md-3 mt-5"></div>
 			<button class="btn btn-light mt-5" type="button" data-toggle="collapse" data-target="#collapseAbout" aria-expanded="false" aria-controls="collapseAbout">
-			About
+			What is this?
 			</button>
 			<div class="collapse mb-5" id="collapseAbout">
 				<div class="card card-body">
-					<p>This project is a machine learning service that takes user reported data on how many dogs there are in various dog parks at different times and couples that with weather, time of the day, holidays, etc. at the time. Then, through machine learning, it uses that information to figure out which circumstances is associated with which amount of dogs present in the dog park. Using the best trained model of predicting the amount of dogs present, it reports back (above) the most likely number of dogs currently in the park, given time of the day, weather, etc. and provides a probability distribution indicating how sure it is.</p>
+					<p>I found it difficult to have to guess when to go to the dogpark in order to maximize the probability that our dog would have someone to play with there. This project is a machine learning service that takes user reported data on how many dogs there are in various dog parks at different times and couples that with weather, time of the day, holidays, etc. at the time. Then, through machine learning, it uses that information to figure out which circumstances is associated with which amount of dogs present in the dog park. Using the best trained model of predicting the amount of dogs present, it reports back (above) the most likely number of dogs currently in the park, given time of the day, weather, etc. and provides a probability distribution indicating how sure it is.</p>
 					<p>If you have any questions or suggestions, please <a href = "mailto: sven.henrik.karlsson@gmail.com">send me an email</a>.</p>
 				</div>
 			</div>
