--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 		<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.1.2/dist/tf.min.js" integrity="sha256-EkeuP8KT4nZF3TYHp/LozYtUmQyXpJ0UZgm4VeixtyA=" crossorigin="anonymous"></script>
 		<script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
 		<script src='js/popper.js'></script>
+		
+		
 		<!--<script src="js/require.js"></script>-->
 		<title>Dog Park Pop Predict</title>
 	</head>
@@ -105,6 +107,7 @@
 			<!--<div class="col-12" id="sankeyDiagramDiv" style="height:4500px;"></div>-->
 			<footer class="mt-5">Powered by <a href="https://darksky.net/poweredby/">Dark Sky</a>, <a href="https://api.dryg.net/">dryg.net</a> and <a href="https://www.tensorflow.org/">Tensor Flow</a></footer>
 		</div>
+		<script src='js/holidays.js'></script>
 		<script src="script.js" type="text/javascript"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</body>
